# wa_wa

./: .gitignore  CHANGELOG.md  PROJECT_SUMMARY.md  README.md  easyocr.py  fitz.py  patch1.md  pyproject.toml  requirements.txt  run_multi_group_scraper.py  run_optimal_scraper.py  test_browser.py  whatsapp_dom_analysis_20251017_023233.json  whatsapp_media_ocr_extractor.py
_archive/deprecated/: whatsapp_rpa_auto_extract.py  whatsapp_rpa_simple_test.py  whatsapp_scraper.py
configs/: config_prime_dev.yaml  openai_config.yaml  optimal_multi_group_config.yaml  role_config.yaml
data/: hvdc_whatsapp_extraction_20250725_005855.json  workflow_data.json
docs/: FINAL_OPTIMAL_COMBINATION_REPORT.md  HVDC_PROJECT_REPORT_GUIDE.md  IMPLEMENTATION_COMPLETE.md  MIGRATION_GUIDE.md  MULTI_GROUP_INTEGRATION_GUIDE.md  MULTI_GROUP_INTEGRATION_REPORT.md  OPTIMAL_SCRAPER_ARCHITECTURE.md  OPTIMAL_SYSTEM_FINAL.md  QUICK_REFERENCE_CARDS.md  QUICK_START_WORKING_SYSTEM.md  REPORT_TEMPLATES.md  SCRIPT_VERIFICATION_REPORT.md  SUCCESS_IMPLEMENTATION.md  TROUBLESHOOTING.md  WHATSAPP_MEDIA_OCR_UPGRADE_PLAN.md  WHATSAPP_WEBJS_INTEGRATION.md
macho_gpt/: __init__.py
setup/: alternative_methods.py  manual_auth.py
tests/: __init__.py  conftest.py  test_browser_arguments_management.py  test_logi_reporter.py  test_media_ocr.py  test_multi_group_scraper.py  test_role_injection.py  test_webjs_bridge.py  test_whatsapp_processor.py  test_whatsapp_scraper.py  test_whatsapp_scraper_integration.py  test_whatsapp_webjs_bridge.py
tools/: dom_analyzer.py  quick_test.py  status_monitor.py
(+22 files in other folders)
